Fixing possible query handle, filed IMPALA-9113, fixed RF bug

Change-Id: Ifeca4335a5c58be5728514f478a127558d9da3ce